<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Framework</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_lecturer">Lecturer</string>
    <string name="title_activity_student">Student</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="title_activity_register">Register</string>
    <string name="email">Email:</string>
    <string name="registerInstructions">Please enter a valid JCU email address 
        and a verification code will be sent to your email address</string>
    <string name="subject1">Subject 1</string>
    <string name="subject2">Subject 2</string>
    <string name="subject3">Subject 3</string>
    <string name="subject4">Subject 4</string>
    <string name="title_activity_add_subjects">Add Subject</string>
    <string name="title_activity_modify_subject_settings">ModifySubjectSettings</string>
    <string name="title_activity_lecturer__timetable">Lecturer_Timetable</string>
    <string name="title_activity_lecturer__manage__subjects">Lecturer_Manage_Subjects</string>
    <string name="title_activity_show_enrolled_subjects">ShowEnrolledSubjectsActivity</string>
    <string name="title_activity_create_quiz">CreateQuizActivity</string>
    <string name="title_activity_view_current_quizes">ViewCurrentQuizesActivity</string>
    <string name="title_activity_add_new_attendance">AddNewAttendance</string>
    <string name="title_activity_student_attend_class">Attend Class</string>
    <string name="title_atendancerecord_list">Atendance Records</string>
    <string name="title_atendancerecord_detail">Atendance Record Detail</string>
    <string name="title_attendance_list">attendances</string>
    <string name="title_attendance_detail">attendance Detail</string>
    <string name="title_activity_view_attendance">ViewAttendanceActivity</string>
    <string name="title_activity_view_single_attendance">ViewSingleAttendanceActivity</string>

</resources>
